opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos-rust-libs/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos-rust-libs.git"
license: "multiple"
depends: [
  "conf-rust"
]
build:[
  [
    "cargo"
    "build"
    "--target-dir" "target-librustzcash"
    "--release"
    "--package" "librustzcash"
  ]
  [
    "cargo"
    "build"
    "--target-dir" "target-wasmer"
    "--release"
    "--package" "wasmer-c-api"
    "--no-default-features"
    "--features" "singlepass,cranelift,wat,middlewares,universal"
  ]
]
synopsis: "Tezos: all rust dependencies and their dependencies"
