opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos-rust-libs/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos-rust-libs.git"
license: "LicenseRef-multiple"
depends: ["conf-rust-2021"]
build:[
  [ "cd" "librustzcash" ]
  [
    "cargo"
    "build"
    "--release"
  ]
  [ "cd" "../wasmer-2.3.0/lib/c-api" ]
  [
    "cargo"
    "build"
    "--release"
    "--no-default-features"
    "--features" "singlepass,cranelift,wat,middlewares,universal"
  ]
  [ "cd" "../../.." ]
]
install: [
  [ "mkdir" "-p" "%{lib}%/tezos-rust-libs" ]
  [ "mkdir" "-p" "%{lib}%/tezos-rust-libs/rust" ]
  [ "cp"
      "librustzcash/include/librustzcash.h"
      "target-librustzcash/release/librustzcash.a"
      "wasmer-2.3.0/lib/c-api/wasm.h"
      "wasmer-2.3.0/lib/c-api/wasmer.h"
      "target-wasmer/release/libwasmer.a"
      "%{lib}%/tezos-rust-libs"
  ]
  [ "cp"
      "librustzcash/include/rust/types.h"
      "%{lib}%/tezos-rust-libs/rust"
  ]

]
synopsis: "Tezos: all rust dependencies and their dependencies"
